--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,34 +1,38 @@
-nav ul{
+nav ul {
     list-style: none;
     display: flex;
     background-color: #00800b62;
 
 }
 
-nav ul a{
-text-decoration: none;
-color: rgb(0, 0, 0);
-margin-right: 30px;
-font-size: 18px;
-
+nav ul li a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    margin-right: 30px;
+    font-size: 18px;
+    padding: 0 10px;
+    transition: all 0.5s ease;
 }
-h1{
+
+h1 {
     text-align: center;
     font-size: 35px;
     padding-bottom: 20px;
     width: 100%;
 }
 
-nav ul li :hover{
-    color: blue;
-    background-color:rgb(167, 160, 160);
-    padding: 0 10px;
-    
+nav ul li a:hover {
+    color: #ffffff;
+    background-color: rgb(0, 124, 206);
+
+
 }
-header{
+
+header {
     background-color: rgb(255, 243, 227);
 }
-article{
+
+article {
     width: 500px;
     height: 400px;
 }
